--- a/app.html
+++ b/app.html
@@ -6,6 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
 </head>
 <body>
-  <a href="itms-services://?action=download-manifest&url=https://cvws.icloud-content.com/B/AQHTUEEZ4PUmb8GFc96JNEArAminAV8ajk6NpeIG9HM-LLdiTvyAvNxS/MasterYi.plist?o=Arb2OSx8H2WlrVNBopKefxHvdHKjRBhW0rpN_Kr2Ikmq&v=1&x=3&a=B_gjeLCrEapWcPBwl4GWJrLE2ugsAzpMQgEAAAMrTEI&e=1522997369&k=3UPINcfJGSStO5PPz3lJig&fl=&r=8ae5ee85-ccf5-449b-af70-22978f9a55fa-1&ckc=com.apple.clouddocs&ckz=com.apple.CloudDocs&p=70&s=2ZCUsZnGV2mo-IIPjtvE6eKK22M">点击开始安装App</a>
+  <a href="itms-services://?action=download-manifest&url=https://kelydia.github.io/annshop/MasterYi.plist">点击开始安装App</a>
 </body>
 </html>
